--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -17,6 +17,10 @@ i {
   font-size: 1.2rem;
 }
 
+.container {
+  min-width: 375px;
+}
+
 .header {
   text-align: center;
 
@@ -190,3 +194,49 @@ i {
 }
 
 @include footer;
+
+@media only screen and (min-width: 400px) {
+  .container {
+    width: 100%;
+    max-width: 800px;
+  }
+
+  .main__cards {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .main__card {
+    margin: 1rem;
+    max-width: 350px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    width: 100%;
+    max-width: 1400px;
+  }
+
+  .nav__cards {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav__card {
+    flex: 1;
+    margin: 0 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .main__card {
+    max-width: 310px;
+  }
+
+  .footer__list {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+}
