--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -4,6 +4,10 @@ i {
   font-size: 1.4rem;
 }
 
+.container {
+  min-width: 375px;
+}
+
 .header {
   position: relative;
 
@@ -22,7 +26,7 @@ i {
   }
 
   &__img {
-    width: 375px;
+    width: 100%;
     height: 280px;
     object-fit: cover;
   }
@@ -178,3 +182,63 @@ i {
 }
 
 @include footer;
+
+@media only screen and (min-width: 400px) {
+  .container {
+    width: 100%;
+    max-width: 800px;
+  }
+
+  .header__img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    width: 100%;
+    max-width: 1400px;
+  }
+
+  .header__imgDiv {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .header__img {
+    width: 50%;
+    height: 45vh;
+    border-radius: 1rem;
+  }
+
+  .main h2 {
+    text-align: center;
+  }
+
+  .main__bar {
+    width: 100%;
+  }
+
+  .main__choix {
+    display: flex;
+  }
+
+  .main__entrees,
+  .main__plats,
+  .main__desserts {
+    flex: 1;
+    padding: 1rem;
+  }
+
+  .main__card {
+    max-width: 350px;
+    margin: 1rem auto;
+  }
+
+  .footer__list {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+}
