--- a/sass/main-menu.css
+++ b/sass/main-menu.css
@@ -157,171 +157,113 @@ a:visited {
           animation-fill-mode: forwards;
 }
 
-h1 {
-  font-size: 1.5rem;
-  line-height: 1.8rem;
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-}
-
-h2 {
-  font-size: 1rem;
-  line-height: 1.2rem;
-  padding-bottom: 0.3rem;
-}
-
 i {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+}
+
+.container {
+  min-width: 375px;
 }
 
 .header {
-  text-align: center;
+  position: relative;
 }
 
 .header__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0.5rem;
   padding-top: 1rem;
-  position: relative;
-  z-index: 1;
-  -webkit-box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.25);
-          box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.25);
-}
-
-.header__city {
-  position: relative;
-  z-index: 0;
-  background-color: #eaeaea;
-  font-weight: bold;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 1rem;
 }
 
-.header__city i {
-  position: relative;
-  left: -2rem;
+.header__logo i {
+  position: absolute;
+  left: 2rem;
+  top: 1.4rem;
 }
 
-.header__slogan {
-  background-color: #f6f6f6;
-}
-
-.header button {
-  margin: 2rem;
-  padding: 1rem;
-  outline: none;
-  border: none;
-  border-radius: 2rem;
-  cursor: pointer;
-  color: white;
-  font-weight: 500;
-  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(-8deg, #6023a9, #ff13be);
-}
-
-.header button:hover {
-  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.3);
-          box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  background: linear-gradient(-8deg, #9356dc, #ff79da);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.header button:active {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
-}
-
-.nav {
-  padding: 1.25rem;
-}
-
-.nav__card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #f6f6f6;
-  padding: 1.5rem;
-  margin-left: 1rem;
-  margin-bottom: 2rem;
-  border-radius: 1.5rem;
-  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav__card i {
-  margin: 0 1.4rem;
-}
-
-.nav__number {
-  width: 25px;
-  height: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #9356dc;
-  border-radius: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: white;
-  margin-left: -35px;
-}
-
-.nav__icon {
-  width: 4rem;
-}
-
-.nav__txt {
-  font-weight: 500;
-}
-
-.nav .purple {
-  background-color: #f2eafb;
-}
-
-.nav .purple i {
-  color: #9356dc;
+.header__img {
+  width: 100%;
+  height: 280px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .main {
-  background-color: #f6f6f6;
   padding: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
+  background-color: #f6f6f6;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  margin-top: -4rem;
+}
+
+.main h1 {
+  font-size: 1.7rem;
+  font-family: Shrikhand;
+  font-weight: 400;
+}
+
+.main h2 {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.main h3 {
+  font-size: 1.1rem;
+}
+
+.main__resto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-right: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .main .full {
-  position: relative;
+  position: absolute;
+  top: 2.55rem;
+  right: 3rem;
   z-index: 1;
-  top: -0.7rem;
   color: #9356dc;
   display: none;
 }
 
 .main .empty {
-  position: relative;
-  top: 0.5rem;
+  position: absolute;
+  top: 2.55rem;
+  right: 3rem;
   z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.main__coeur {
-  height: 50px;
-  margin: auto 0;
 }
 
 .main__coeur:hover .full {
@@ -353,86 +295,56 @@ i {
   transition: 0.01s ease;
 }
 
+.main__bar {
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
+  margin-bottom: 0.8rem;
+}
+
 .main__cards {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 .main__card {
+  -webkit-animation: fadeUp 0.5s ease-in;
+          animation: fadeUp 0.5s ease-in;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
   background-color: white;
+  margin-bottom: 1rem;
   border-radius: 1rem;
   -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  height: 250px;
-  margin-bottom: 1.25rem;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
-.main__card img {
-  height: 11rem;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: bottom;
-     object-position: bottom;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
+.main .delay-0 {
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
 }
 
-.main__new {
-  text-align: center;
-  position: relative;
-  float: right;
-  width: 6rem;
-  top: -10rem;
-  right: 1rem;
-  padding: 0.4rem;
-  background-color: #99e2d0;
-  border-radius: 0.2rem;
-  color: #217460;
-  font-weight: 500;
+.main .delay-1 {
+  -webkit-animation-delay: 3.14286s;
+          animation-delay: 3.14286s;
 }
 
-.main__subt {
-  padding: 0.5rem 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: middle;
-      -ms-flex-align: middle;
-          align-items: middle;
-  vertical-align: middle;
+.main .delay-2 {
+  -webkit-animation-delay: 3.28571s;
+          animation-delay: 3.28571s;
 }
 
-.main__subtNew {
-  padding: 0.5rem 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: middle;
-      -ms-flex-align: middle;
-          align-items: middle;
-  vertical-align: middle;
-  width: 100%;
-  position: relative;
-  top: -1.9rem;
+.main .delay-3 {
+  -webkit-animation-delay: 3.42857s;
+          animation-delay: 3.42857s;
 }
 
 .main__txt {
@@ -443,9 +355,104 @@ i {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 0.6rem;
+  overflow: hidden;
+}
+
+.main__title {
+  padding-bottom: 0.4rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.main__desc {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.main__prix {
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 0.6rem;
+}
+
+.main__check {
+  background-color: #99e2d0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  width: 0rem;
+  -webkit-transition-duration: 0.6s;
+          transition-duration: 0.6s;
+}
+
+.main__icon {
+  color: #99e2d0;
+  -webkit-transform: rotate(-360deg);
+          transform: rotate(-360deg);
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+.main .main__card:hover .main__check {
+  width: 4rem;
+}
+
+.main .main__card:hover .main__icon {
+  -webkit-transform: rotate(0);
+          transform: rotate(0);
+  color: white;
+}
+
+.main button {
+  margin: 2rem;
+  padding: 1rem;
+  outline: none;
+  border: none;
+  border-radius: 2rem;
+  cursor: pointer;
+  color: white;
+  font-weight: 500;
+  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+  background: linear-gradient(-8deg, #6023a9, #ff13be);
+}
+
+.main button:hover {
+  -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(-8deg, #9356dc, #ff79da);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.main button:active {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+
+.main button {
+  width: 50%;
+  margin: 0 auto;
 }
 
 .footer {
@@ -499,21 +506,9 @@ i {
     width: 100%;
     max-width: 800px;
   }
-  .main__cards {
+  .header__img {
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .main__card {
-    margin: 1rem;
-    max-width: 350px;
+    height: auto;
   }
 }
 
@@ -522,23 +517,42 @@ i {
     width: 100%;
     max-width: 1400px;
   }
-  .nav__cards {
+  .header__imgDiv {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  .nav__card {
+  .header__img {
+    width: 50%;
+    height: 45vh;
+    border-radius: 1rem;
+  }
+  .main h2 {
+    text-align: center;
+  }
+  .main__bar {
+    width: 100%;
+  }
+  .main__choix {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .main__entrees,
+  .main__plats,
+  .main__desserts {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
-    margin: 0 2rem;
-    margin-bottom: 2rem;
+    padding: 1rem;
   }
   .main__card {
-    max-width: 310px;
+    max-width: 350px;
+    margin: 1rem auto;
   }
   .footer__list {
     -webkit-box-pack: justify;
@@ -550,4 +564,4 @@ i {
             flex-direction: row;
   }
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main-menu.css.map */
